<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LS300</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Monitor</string>
    <string name="NAME">name</string>
    <string name="DATE">date</string>
    <string name="STUFF">stuff</string>
    <string name="DESCRIPTION">descriprion</string>
    <string name="SAVE">save</string>
    <string name="CANCEL">cancel</string>
    <string name="Accuracy">Accuracy</string>
    <string name="Horizontally">Horizontally</string>
    <string name="Vertical">Vertical</string>
    <string name="Type">Type</string>
    <string name="Device">Device</string>
    <string name="Baudrate">Baudrate</string>
    <string name="State">State</string>
    <string name="IP">IP</string>
    <string name="Port">Port</string>
    <string name="SPath">Save Path</string>
    <string name="Cloud">Cloud</string>
    <string name="Native">Native</string>
    <string name="Remote">Remote</string>
    <string name="Startup">Auto test connection on</string>
    <string name="LS300">LS300 V2.0</string>
    <string name="Core">Core: 2.0.0</string>
    <string name="HardWare">HardWare: LS300-2-2-1</string>
    <string name="COPYRIGHT">(@)HDSY 2013-07-09</string>
    <string name="ZHD">中海达</string>
    <string name="HT">HI-TARGET</string>
    <string name="ZHDGPS">www.zhdgps.com</string>
    <string name="config">Config</string>
    <string name="Scan">Scan</string>
    <string name="Guide">Guide</string>
    <string name="Data">Data</string>
    <string name="Config">Config</string>
    <string name="Setting">Setting</string>
    <string name="Leave">Leave</string>
    <string name="Select">Select</string>
    <string name="Delete">Delete</string>
    <string name="OK">OK</string>
    <string name="pic">picture</string>
    <string name="Strtext1">Scan</string>
    <string name="Strtext2">Monitor</string>
    <string name="Strtext3">Settings</string>
    <string name="title_name_1">config1</string>
    <string name="title_name_2">config2</string>
    <string name="title_name_3">config3</string>
    <string name="title_name_4">config4</string>
    <string name="title_name_5">config5</string>
    <string name="title_name_6">config6</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="mode">Mode</string>
    <string name="Native">Native</string>
    <string name="Connection">Connection</string>
    <string name="IP">IP</string>
    <string name="Port">Port</string>
    <string name="Device">Device</string>
    <string name="Baudrate">Baudrate</string>
    <string name="Serial">Serial</string>
    <string name="Tcp">Tcp</string>
    <string name="webservice">Web Service</string>
    <string name="datapath">Data Path</string>
    <string name="rootdir">Root Dir</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="precision">Precision</string>
    <string name="low">LOW</string>
    <string name="area">Area</string>
    <string name="horizontally">Horizontally</string>
    <string name="vertical">Vertical</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="top">Top</string>
    <string name="name">Name</string>
    <string name="stuff">Stuff</string>
    <string name="date">Date</string>
    <string name="detail">Detail</string>
    <string name="newdata">New Data</string>
    <string name="datalist">Data List</string>
    <string name="plus">+</string>
    <string name="configlist">Config List</string>
    <string name="location">Location</string>
    <string name="connect">Connect</string>
    <string name="monitor">Monitor</string>
    <string name="photo">Photo</string>
    <string name="quit">Quit</string>
    <string name="newconfig">New Config</string>
    <string name="back">Back</string>
    <string name="plusdelay">PlusDelay</string>
    <string name="frequency">Frequency</string>
    <string name="resolution">Resolution</string>
    <string name="select">Select</string>
    <string name="temperature">Temperature</string>
    <string name="battery">Battery</string>
    <string name="titl_x">Titl(X)</string>
    <string name="titl_y">Titl(Y)</string>
    <string name="angle_h">Angle(H)</string>
    <string name="temp">Temp</string>
    <string name="application_name">LS300 V2.0</string>
    <string name="reload">Reload</string>
    <string name="test">Test</string>

</resources>