<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/MorePageTableLayout_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center" >

            <TextView
                android:text="@string/LS300"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center" >

            <TextView
                android:text="@string/Core"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center" >

            <TextView
                android:text="@string/HardWare"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center" >

            <TextView
                android:layout_marginLeft="10dp"
                android:paddingLeft="150dp"
                android:text="@string/COPYRIGHT"
                android:textColor="#4A708B"
                android:textSize="@dimen/text_size_small" >
            </TextView>
        </TableRow>
    </TableLayout>

</LinearLayout>