<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <!-- 扫描区域设置 -->

    <TableLayout
        android:id="@+id/MorePageTableLayout_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center"
            android:padding="3dip" >

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/Select"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />

            <ImageButton
                android:id="@+id/btn_select_area"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/android_big_button_normal"
                android:src="@drawable/main_navigation_catagory" />

        </TableRow>

        <!-- 水平方向 -->

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:padding="3dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="4.0dip"
                android:text="@string/horizontally"
                android:textColor="#ff888888"
                android:textSize="@dimen/text_size_middle" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center"
            android:padding="3dip" >

            <!-- 起始角 -->

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/left"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/et_set_area_left"
                android:layout_margin="3dp"
                android:gravity="left|center_vertical"
                android:padding="3dip"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center"
            android:padding="3dip" >

            <!-- 终止角 -->

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/right"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" >
            </TextView>

            <EditText
                android:id="@+id/et_set_area_right"
                android:layout_margin="3dp"
                android:gravity="left|center_vertical"
                android:padding="3dip"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />

        </TableRow>

        <!-- 垂直方向 -->

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:padding="3dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="4.0dip"
                android:text="@string/vertical"
                android:textColor="#ff888888"
                android:textSize="@dimen/text_size_middle" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center"
            android:padding="3dip" >

            <!-- 起始角 -->

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/bottom"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" >
            </TextView>

            <EditText
                android:id="@+id/et_set_area_bottom"
                android:layout_margin="3dp"
                android:gravity="left|center_vertical"
                android:padding="3dip"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center"
            android:padding="3dip" >

            <!-- 终止角 -->

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/top"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" >
            </TextView>

            <EditText
                android:id="@+id/et_set_area_top"
                android:layout_margin="3dp"
                android:gravity="left|center_vertical"
                android:padding="3dip"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />

        </TableRow>
    </TableLayout>

</LinearLayout>