<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/MorePageTableLayout_Sick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center"
            android:padding="3dip" >

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" >
            </TextView>

            <EditText
                android:id="@+id/et_data_name"
                android:gravity="left|center_vertical"
                android:padding="3dip"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center"
            android:padding="3dip" >

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/stuff"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" >
            </TextView>

            <EditText
                android:id="@+id/et_data_stuff"
                android:gravity="left|center_vertical"
                android:padding="3dip"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center"
            android:padding="3dip" >

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/et_data_date"
                android:gravity="left|center_vertical"
                android:padding="3dip"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/more_itemmiddle_press"
            android:gravity="center"
            android:padding="3dip" >

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/location"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/et_data_locate"
                android:gravity="left|center_vertical"
                android:padding="3dip"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_small" />
        </TableRow>
    </TableLayout>

</LinearLayout>